--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid nav-container ">
               <a class="navbar-brand" href="#">
-                <img src="/images/nav_logo.png" id="logo_img" alt="nav_logo"><span id="logo_desc">College</span> 
+                <img src="images/nav_logo.png" id="logo_img" alt="nav_logo"><span id="logo_desc">College</span> 
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
